--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -853,4 +853,6 @@
     <string name="on_demand_config_download_text">Looks like you download a lot. Do you want episode lists to show download buttons?</string>
     <string name="delete_playlist">Delete Playlist</string>
     <string name="delete_playlist_confirmation_msg">Do you want to delete this playlist?</string>
+    <string name="pref_auto_delete_queue_summary">Keep episodes that are queued</string>
+    <string name="pref_auto_delete_queue_title">Keep Queued Episodes</string>
 </resources>
