--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -853,6 +853,7 @@
     <string name="on_demand_config_download_text">Looks like you download a lot. Do you want episode lists to show download buttons?</string>
     <string name="delete_playlist">Delete Playlist</string>
     <string name="delete_playlist_confirmation_msg">Do you want to delete this playlist?</string>
+    <string name="playlists_label">Playlists</string>
     <string name="pref_auto_delete_playlist_summary">Exclude playlisted episodes from auto delete</string>
     <string name="pref_auto_delete_playlist_title">Keep Playlisted Episodes</string>
 </resources>
