--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="add_to_playlist_label">Add to Playlist</string>
     <string name="no_playlists_label">No Playlists</string>
     <string name="no_playlists_sub_label">After you create a playlist, it will appear here.</string>
+    <string name="auto_download_cache_pref_summary">"The set of episodes kept by auto download. Excluded from auto delete. "</string>
 </resources>
