Update hinid strings

--- a/core/src/main/res/values-hi/strings.xml
+++ b/core/src/main/res/values-hi/strings.xml
@@ -367,6 +367,69 @@
   <string name="mark_all_read_confirmation_msg">कृपया पुष्टि करें कि आप सभी एपिसोड को खेले जाने के रूप में चिह्नित करना चाहते हैं।</string>
   <string name="mark_all_read_feed_confirmation_msg">कृपया पुष्टि करें कि आप इस पॉडकास्ट में सभी एपिसोड को खेले जाने के रूप में चिह्नित करना चाहते हैं।</string>
   <string name="remove_all_new_flags_label">सभी \"नए\" झंडे निकालें</string>
+    <string name="removed_all_new_flags_msg">सभी \"नए\" झंडे निकालें</string>
+  <string name="remove_all_new_flags_confirmation_msg">कृपया पुष्टि करें कि आप सभी एपिसोड से \"नया\" ध्वज हटाना चाहते हैं।</string>
+  <string name="share_label_with_ellipses">हिस्सा।।।</string>
+  <string name="share_website_url_label">वेबसाइट का पता</string>
+  <string name="share_feed_url_label">पॉडकास्ट फीड यूआरएल</string>
+  <string name="feed_delete_confirmation_msg">कृपया पुष्टि करें कि आप पॉडकास्ट \"%1$s\" और इसके सभी एपिसोड (डाउनलोड किए गए एपिसोड सहित) को हटाना चाहते हैं।</string>
+  <string name="feed_delete_confirmation_msg_batch">कृपया पुष्टि करें कि आप चयनित पॉडकास्ट और उनके सभी एपिसोड (डाउनलोड किए गए एपिसोड सहित) को हटाना चाहते हैं।</string>
+  <string name="feed_delete_confirmation_local_msg">कृपया पुष्टि करें कि आप पॉडकास्ट को हटाना चाहते हैं \"%1$s\"। स्थानीय स्रोत फ़ोल्डर में फ़ाइलों को हटाया नहीं जाएगा।</string>
+  <string name="multi_select">मल्टी सेलेक्ट</string>
+  <string name="select_all_above">उपरोक्त सभी का चयन करें</string>
+  <string name="select_all_below">नीचे सभी का चयन करें</string>
+  <string name="please_wait_for_data">डेटा लोड होने तक इंतजार करें</string>
+  <string name="updates_disabled_label">अपडेट अक्षम</string>
+  <string name="add_to_folder">टैग जोड़ें</string>
+  <string name="confirm_mobile_feed_refresh_dialog_message">मोबाइल डेटा कनेक्शन पर एपिसोड डाउनलोड करने सेटिंग्स में अक्षम है।  क्या आप अभी भी मोबाइल डेटा पर सभी पॉडकास्ट को ताज़ा करना चाहते हैं?</string>
+  <string name="delete_episode_label">एपिसोड हटाएं</string>
+  <string name="remove_new_flag_label">\"नया\" झंडा निकालें</string>
+  <string name="removed_new_flag_label">Removed \"new\" flag</string>
+  <string name="marked_as_played_label">हटाया \"नया\" झंडा</string>
+  <string name="marked_as_unplayed_label">बिना खेला के रूप में चिह्नित</string>
+  <string name="mark_read_no_media_label">मार्क के रूप में पढ़ा</string>
+  <string name="play_this_to_seek_position">पदों पर कूदने के लिए, आपको एपिसोड खेलने की आवश्यकता है</string>
+  <string name="mark_unread_label_no_media">बिना पढ़े के चिह्नित</string>
+  <string name="no_items_selected">चयनित कोई आइटम नहीं</string>
+  <string name="download_error_tap_for_details">विवरण देखने के लिए टैप करें।</string>
+  <string name="download_error_unsupported_type_html">पॉडकास्ट होस्ट के सर्वर ने एक वेबसाइट भेजी, पॉडकास्ट नहीं।</string>
+  <string name="download_error_not_found">पॉडकास्ट होस्ट के सर्वर को पता नहीं है कि फाइल कहां खोजें। हो सकता है कि इसे हटा दिया गया हो.</string>
+  <string name="download_error_wrong_size">डाउनलोड पूरा करने से पहले सर्वर कनेक्शन खो गया था</string>
+  <string name="download_error_blocked">डाउनलोड को आपके डिवाइस पर किसी अन्य ऐप द्वारा ब्लॉक कर दिया गया था।</string>
+  <string name="download_error_certificate">एक सुरक्षित कनेक्शन स्थापित करने में असमर्थ। इसका मतलब यह हो सकता है कि आपके डिवाइस पर किसी अन्य ऐप ने डाउनलोड को ब्लॉक कर दिया, या सर्वर प्रमाण पत्र के साथ कुछ गलत है।</string>
+  <string name="auto_download_report_title">ऑटो डाउनलोड पूरा</string>
+  <string name="completing">पूरा।।।</string>
+  <string name="null_value_podcast_error">कोई पॉडकास्ट प्रदान नहीं किया गया था जिसे दिखाया जा सकता है।</string>
+  <string name="confirm_mobile_download_dialog_message_not_in_queue">मोबाइल डेटा कनेक्शन पर डाउनलोड करने सेटिंग्स में अक्षम है।  आप या तो केवल कतार में एपिसोड जोड़ना चुन सकते हैं या आप अस्थायी रूप से डाउनलोड करने की अनुमति दे सकते हैं।  <small>हिताने की पसंद 10 मिनट के लिए याद किया जाएगा ।</small></string>
+  <string name="confirm_mobile_download_dialog_message">मोबाइल डेटा कनेक्शन पर डाउनलोड करने सेटिंग्स में अक्षम है।  क्या आप अस्थायी रूप से डाउनलोड करने की अनुमति देना चाहते हैं?  <small>हिताने की पसंद 10 मिनट के लिए याद किया जाएगा ।</small></string>
+  <string name="confirm_mobile_streaming_notification_title">मोबाइल स्ट्रीमिंग की पुष्टि करें</string>
+  <string name="confirm_mobile_streaming_notification_message">मोबाइल डेटा कनेक्शन पर स्ट्रीमिंग सेटिंग्स में अक्षम है। वैसे भी स्ट्रीम करने के लिए टैप करें।</string>
+  <string name="confirm_mobile_streaming_button_always">सदा</string>
+  <string name="confirm_mobile_streaming_button_once">एक बार</string>
+  <string name="playback_error_unsupported">असमर्थित मीडिया प्रकार</string>
+  <string name="playback_error_timeout">ऑपरेशन समय पर</string>
+  <string name="playback_error_source">मीडिया फ़ाइल तक पहुंचने में असमर्थ</string>
+  <string name="player_go_to_picture_in_picture">पिक्चर-इन-पिक्चर मोड</string>
+  <string name="error_file_not_found">फाइल नहीं मिली</string>
+  <string name="no_media_label">आइटम में मीडिया फ़ाइल नहीं है</string>
+  <string name="lock_queue">लॉक कतार</string>
+  <string name="queue_locked">कतार बंद</string>
+  <string name="queue_unlocked">कतार खुल गई</string>
+  <string name="queue_lock_warning">यदि आप कतार को लॉक करते हैं, तो आप अब एपिसोड स्वाइप या फिर से व्यवस्थित नहीं कर सकते हैं।</string>
+  <string name="checkbox_do_not_show_again">फिर से न दिखाएं</string>
+  <string name="sort">जाति</string>
+  <string name="keep_sorted">हल रखें</string>
+  <string name="speed_presets">प्रीसेट</string>
+  <string name="preset_already_exists">%1$.2fx पहले से ही एक पूर्व निर्धारित के रूप में बचाया जाता है।</string>
+  <string name="no_items_header_label">कोई पंक्तिबद्ध एपिसोड नहीं</string>
+  <string name="no_items_label">इसे डाउनलोड करके एक एपिसोड जोड़ें, या एक एपिसोड को लंबे समय तक दबाएं और \"कतार में जोड़ें\" चुनें।</string>
+  <string name="no_comp_downloads_head_label">कोई डाउनलोड एपिसोड नहीं</string>
+  <string name="no_comp_downloads_label">आप पॉडकास्ट विवरण स्क्रीन पर एपिसोड डाउनलोड कर सकते हैं।</string>
+  <string name="no_log_downloads_head_label">कोई डाउनलोड लॉग नहीं</string>
+  <string name="no_log_downloads_label">उपलब्ध होने पर यहां डाउनलोड लॉग दिखाई देंगे।</string>
+  <string name="no_history_head_label">कोई इतिहास नहीं</string>
+  <string name="no_history_label">एक एपिसोड सुनने के बाद यह यहां दिखाई देगा।</string>
+  <string name="no_all_episodes_head_label">कोई एपिसोड नहीं</string>
   <!--Episodes apply actions-->
   <!--Sort-->
   <!--Rating dialog-->
