--- a/core/src/main/res/values-hi/strings.xml
+++ b/core/src/main/res/values-hi/strings.xml
@@ -430,6 +430,90 @@
   <string name="no_history_head_label">कोई इतिहास नहीं</string>
   <string name="no_history_label">एक एपिसोड सुनने के बाद यह यहां दिखाई देगा।</string>
   <string name="no_all_episodes_head_label">कोई एपिसोड नहीं</string>
+  <string name="no_all_episodes_label">जब आप पॉडकास्ट जोड़ेंगे, तो एपिसोड यहां दिखाए जाएंगे।</string>
+  <string name="no_new_episodes_head_label">कोई नया एपिसोड नहीं</string>
+  <string name="no_new_episodes_label">जब नए एपिसोड आएंगे तो उन्हें यहां दिखाया जाएगा।</string>
+  <string name="no_fav_episodes_head_label">कोई पसंदीदा एपिसोड नहीं</string>
+  <string name="no_fav_episodes_label">आप उन्हें लंबे समय तक दबाकर पसंदीदा में एपिसोड जोड़ सकते हैं।</string>
+  <string name="no_subscriptions_head_label">कोई सदस्यता नहीं</string>
+  <string name="no_subscriptions_label">पॉडकास्ट की सदस्यता लेने के लिए, नीचे दिए गए प्लस आइकन को दबाएं।</string>
+  <string name="storage_sum">प्रकरण ऑटो हटाएं, आयात, निर्यात</string>
+  <string name="synchronization_pref">तुल्यकालन</string>
+  <string name="synchronization_sum">अन्य उपकरणों के साथ सिंक्रोनाइज़ करें</string>
+  <string name="import_export_search_keywords">बैकअप, पुनर्स्थापित करें</string>
+  <string name="playback_control">प्लेबैक कंट्रोल</string>
+  <string name="reassign_hardware_buttons">हार्डवेयर बटन को पुनः असाइन करें</string>
+  <string name="preference_search_hint">ढूँढ।।।</string>
+  <string name="preference_search_no_results">कोई परिणाम नहीं ...</string>
+  <string name="preference_search_clear_history">स्पष्ट इतिहास</string>
+  <string name="media_player">मीडिया प्लेयर</string>
+  <string name="pref_episode_cleanup_summary">कब तक इंतजार करने से पहले खेला प्रकरण स्वचालित हटाने के लिए अस्पष्ट हो जाता है</string>
+  <string name="pref_pauseOnDisconnect_sum">हेडफोन या ब्लूटूथ कट जाने पर प्लेबैक को रोकें</string>
+  <string name="pref_unpauseOnHeadsetReconnect_sum">जब हेडफोन फिर से कनेक्ट हो जाते हैं तो प्लेबैक फिर से शुरू करें</string>
+  <string name="pref_unpauseOnBluetoothReconnect_sum">ब्लूटूथ को फिर से कनेक्ट करने पर प्लेबैक फिर से शुरू करें</string>
+  <string name="pref_hardware_forward_button_title">फॉरवर्ड बटन</string>
+  <string name="pref_hardware_forward_button_summary">आगे बटन व्यवहार को अनुकूलित करें</string>
+  <string name="pref_hardware_previous_button_title">पिछला बटन</string>
+  <string name="pref_hardware_previous_button_summary">पिछले बटन व्यवहार को अनुकूलित करें</string>
+  <string name="button_action_fast_forward">फास्ट फॉरवर्ड</string>
+  <string name="button_action_rewind">उल्टा</string>
+  <string name="button_action_skip_episode">प्रकरण छोड़ें</string>
+  <string name="button_action_restart_episode">एपिसोड को पुनः आरंभ करें</string>
+  <string name="pref_auto_delete_sum">प्लेबैक पूरा होने पर एपिसोड हटाएं</string>
+  <string name="pref_auto_delete_title">ऑटो डिलीट</string>
+  <string name="pref_smart_mark_as_played_sum">मार्क एपिसोड के रूप में खेला जाता है, भले ही समय खेलने के सेकंड की एक निश्चित राशि से भी कम अभी भी छोड़ दिया है</string>
+  <string name="pref_smart_mark_as_played_title">स्मार्ट मार्क के रूप में खेला</string>
+  <string name="pref_skip_keeps_episodes_sum">जब उन्हें छोड़ दिया जाता है तो एपिसोड रखें</string>
+  <string name="pref_skip_keeps_episodes_title">छोड़े गए एपिसोड रखें</string>
+  <string name="pref_favorite_keeps_episodes_sum">जब वे पसंदीदा चिह्नित होते हैं तो एपिसोड रखें</string>
+  <string name="pref_favorite_keeps_episodes_title">पसंदीदा एपिसोड रखें</string>
+  <string name="playback_pref_sum">फोन्स नियंत्रण, अंतराल छोड़ें, कतार</string>
+  <string name="network_pref_sum">इंटरवल, डाउनलोड कंट्रोल, मोबाइल डेटा अपडेट करें</string>
+  <string name="feed_refresh_title">पॉडकास्ट को ताज़ा करें</string>
+  <string name="feed_refresh_sum">अपने आप नए एपिसोड की तलाश करने के लिए अंतराल या एक विशिष्ट समय निर्दिष्ट करें</string>
+  <string name="feed_refresh_interval">अंतराल</string>
+  <string name="feed_refresh_time">समय</string>
+  <string name="feed_refresh_never">कभी नहीं</string>
+  <string name="feed_refresh_interval_at">%1$ एस पर</string>
+  <string name="pref_unpauseOnHeadsetReconnect_title">हेडफोन फिर से कनेक्ट</string>
+  <string name="pref_unpauseOnBluetoothReconnect_title">ब्लूटूथ रीकनेक्ट</string>
+  <string name="pref_stream_over_download_title">स्ट्रीमिंग पसंद करते हैं</string>
+  <string name="pref_stream_over_download_sum">सूचियों में डाउनलोड बटन के बजाय डिस्प्ले स्ट्रीम बटन।</string>
+  <string name="pref_mobileUpdate_sum">मोबाइल डेटा कनेक्शन पर क्या अनुमति दी जानी चाहिए चुनें</string>
+  <string name="pref_mobileUpdate_refresh">पॉडकास्ट ताज़ा</string>
+  <string name="pref_mobileUpdate_images">कवर छवियां</string>
+  <string name="pref_mobileUpdate_auto_download">ऑटो डाउनलोड</string>
+  <string name="pref_mobileUpdate_episode_download">एपिसोड डाउनलोड</string>
+  <string name="pref_mobileUpdate_streaming">कोशिकाद्रव्य-संचार</string>
+  <string name="user_interface_sum">सूरत, सदस्यता, लॉकस्क्रीन</string>
+  <string name="pref_nav_drawer_items_title">नेविगेशन दराज आइटम सेट करें</string>
+  <string name="pref_nav_drawer_items_sum">नेविगेशन दराज में कौन सी वस्तुएं दिखाई देती हैं।</string>
+  <string name="pref_nav_drawer_feed_order_title">सदस्यता आदेश सेट करें</string>
+  <string name="pref_nav_drawer_feed_order_sum">अपनी सदस्यता का क्रम बदलें</string>
+  <string name="pref_nav_drawer_feed_counter_title">सदस्यता काउंटर सेट करें</string>
+  <string name="pref_nav_drawer_feed_counter_sum">सदस्यता काउंटर द्वारा प्रदर्शित जानकारी बदलें। इसके अलावा सदस्यता की छंटाई को प्रभावित करता है अगर \'सदस्यता आदेश\' \'काउंटर\' के लिए सेट है।</string>
+  <string name="pref_automatic_download_on_battery_title">चार्ज नहीं करने पर डाउनलोड करें</string>
+  <string name="pref_automatic_download_on_battery_sum">बैटरी चार्ज नहीं होने पर स्वचालित डाउनलोड की अनुमति दें</string>
+  <string name="pref_parallel_downloads_title">समानांतर डाउनलोड</string>
+  <string name="pref_episode_cache_summary">डाउनलोड किए गए एपिसोड की कुल संख्या डिवाइस पर कैश की गई। अगर यह नंबर पहुंच जाता है तो ऑटोमेटिक डाउनलोड निलंबित कर दिया जाएगा।</string>
+  <string name="pref_episode_cover_title">एपिसोड कवर का उपयोग करें</string>
+  <string name="pref_episode_cover_summary">जब भी उपलब्ध हो सूचियों में एपिसोड विशिष्ट कवर का उपयोग करें। यदि अनियंत्रित, एप्लिकेशन हमेशा पॉडकास्ट कवर छवि का उपयोग करेगा।</string>
+  <string name="pref_show_remain_time_title">शेष समय दिखाएं</string>
+  <string name="pref_show_remain_time_summary">चेक किए जाने पर एपिसोड का शेष समय प्रदर्शित करें। यदि अनियंत्रित, एपिसोड की कुल अवधि प्रदर्शित करें।</string>
+  <string name="pref_theme_title_use_system">सिस्टम थीम का उपयोग करें</string>
+  <string name="pref_theme_title_trueblack">ब्लैक (एमोलेड तैयार)</string>
+  <string name="synchronization_logout">लॉगआउट</string>
+  <string name="pref_synchronization_logout_toast">लॉगआउट सफल रहा</string>
+  <string name="synchronization_sync_changes_title">अब सिंक्रोनाइज करें</string>
+  <string name="synchronization_full_sync_title">बल पूर्ण समकालिकीकरण</string>
+    <string name="synchronization_login_status">"<i>%2$s</i> पर <i>%1$s</i> के रूप में लॉग इन किया गया। "</string>
+  <string name="synchronization_summary_unchoosen">आप अपनी सदस्यता और एपिसोड प्ले स्टेट को सिंक्रोनाइज़ करने के लिए कई प्रदाताओं में से चुन सकते हैं</string>
+  <string name="synchronization_summary_nextcloud">Gpoddersync एक ओपन-सोर्स नेक्स्टक्लाउड ऐप है जिसे आप आसानी से अपने सर्वर पर इंस्टॉल कर सकते हैं। ऐप एपपोड परियोजना से स्वतंत्र है।</string>
+  <string name="synchronization_nextcloud_authenticate_browser">खोले गए वेब ब्राउज़र का उपयोग करके अनुदान पहुंच और एपेक्सपॉड में वापस आएं।</string>
+  <string name="synchronization_choose_title">सिंक्रोनाइजेशन प्रदाता चुनें</string>
+  <string name="synchronization_force_sync_summary">सभी सदस्यताओं और एपिसोड राज्यों को फिर से सिंक्रोनाइज़ करें</string>
+  <string name="synchronization_sync_summary">सदस्यता और प्रकरण राज्य परिवर्तन सिंक्रोनाइज़ करें</string>
+  <string name="dialog_choose_sync_service_title">सिंक्रोनाइजेशन प्रदाता चुनें</string>
   <!--Episodes apply actions-->
   <!--Sort-->
   <!--Rating dialog-->
