Update hindi strings.

--- a/core/src/main/res/values-hi/strings.xml
+++ b/core/src/main/res/values-hi/strings.xml
@@ -514,6 +514,202 @@
   <string name="synchronization_force_sync_summary">सभी सदस्यताओं और एपिसोड राज्यों को फिर से सिंक्रोनाइज़ करें</string>
   <string name="synchronization_sync_summary">सदस्यता और प्रकरण राज्य परिवर्तन सिंक्रोनाइज़ करें</string>
   <string name="dialog_choose_sync_service_title">सिंक्रोनाइजेशन प्रदाता चुनें</string>
+    <string name="pref_feed_playback_speed_sum">इस पॉडकास्ट में एपिसोड के लिए ऑडियो प्लेबैक शुरू करते समय उपयोग करने की गति</string>
+  <string name="pref_feed_skip">ऑटो छोड़ें</string>
+  <string name="pref_feed_skip_sum">परिचय छोड़ें और क्रेडिट समाप्त करें।</string>
+  <string name="pref_feed_skip_ending">अंतिम छोड़ें</string>
+  <string name="pref_feed_skip_intro">पहले छोड़ें</string>
+  <string name="pref_feed_skip_ending_toast">"पिछले छोड़ दिया %d सेकंड "</string>
+  <string name="pref_feed_skip_intro_toast">पहले छोड़ दिया %d सेकंड</string>
+  <string name="pref_playback_time_respects_speed_title">प्लेबैक गति के लिए मीडिया की जानकारी समायोजित करें</string>
+  <string name="pref_playback_time_respects_speed_sum">प्रदर्शित स्थिति और अवधि प्लेबैक गति के लिए अनुकूलित कर रहे हैं</string>
+  <string name="pref_fast_forward">फास्ट फॉरवर्ड स्किप समय</string>
+  <string name="pref_fast_forward_sum">जब फास्ट फॉरवर्ड बटन क्लिक किया जाता है तो आगे बढ़ने के लिए सेकंड की संख्या को अनुकूलित करें</string>
+  <string name="pref_rewind">स्किप समय को उल्टा करें</string>
+  <string name="pref_rewind_sum">जब रिवाइंड बटन क्लिक किया जाता है तो पीछे की ओर कूदने के लिए सेकंड की संख्या को अनुकूलित करें</string>
+  <string name="pref_expandNotify_title">उच्च अधिसूचना प्राथमिकता</string>
+  <string name="pref_expandNotify_sum">यह आमतौर पर प्लेबैक बटन दिखाने के लिए अधिसूचना का विस्तार करता है।</string>
+  <string name="pref_persistNotify_title">लगातार प्लेबैक कंट्रोल</string>
+  <string name="pref_persistNotify_sum">प्लेबैक रोके जाने पर नोटिफिकेशन और लॉकस्क्रीन कंट्रोल रखें।</string>
+  <string name="pref_compact_notification_buttons_title">कॉम्पैक्ट नोटिफिकेशन बटन सेट करें</string>
+  <string name="pref_compact_notification_buttons_sum">नोटिफिकेशन ध्वस्त होने पर प्लेबैक बटन बदलें। प्ले/पॉज़ बटन हमेशा शामिल होता है।</string>
+  <string name="pref_compact_notification_buttons_dialog_title">अधिकतम %1$d आइटम चुनें</string>
+  <string name="pref_compact_notification_buttons_dialog_error">आप केवल अधिकतम %1$d आइटम चुन सकते हैं।</string>
+  <string name="pref_lockscreen_background_title">लॉकस्क्रीन बैकग्राउंड सेट करें</string>
+  <string name="pref_lockscreen_background_sum">लॉकस्क्रीन बैकग्राउंड को मौजूदा एपिसोड की इमेज पर सेट करें । साइड इफेक्ट के तौर पर यह थर्ड पार्टी एप्स में इमेज भी दिखाएगा।</string>
+  <string name="pref_enqueue_location_title">एनक्क्यू स्थान</string>
+  <string name="pref_enqueue_location_sum">एपिसोड जोड़ें: %1$s</string>
+  <string name="enqueue_location_back">पीठ</string>
+  <string name="enqueue_location_front">मोर्चा</string>
+  <string name="enqueue_location_after_current">वर्तमान प्रकरण के बाद</string>
+  <string name="pref_smart_mark_as_played_disabled">विकलांग</string>
+  <string name="documentation_support">दस्तावेज़ीकरण और समर्थन</string>
+  <string name="visit_user_forum">उपयोगकर्ता फोरम</string>
+  <string name="bug_report_title">रिपोर्ट बग</string>
+  <string name="open_bug_tracker">ओपन बग ट्रैकर</string>
+  <string name="copy_to_clipboard">क्लिपबोर्ड पर कॉपी करें</string>
+  <string name="copied_to_clipboard">क्लिपबोर्ड पर कॉपी किया गया</string>
+  <string name="pref_media_player_message">फ़ाइलों को खेलने के लिए किस मीडिया प्लेयर का उपयोग करना है, यह चुनें</string>
+  <string name="pref_current_value">वर्तमान मूल्य: %1$s</string>
+  <string name="pref_proxy_title">प्रतिनिधि</string>
+  <string name="pref_proxy_sum">एक नेटवर्क प्रॉक्सी सेट करें</string>
+  <string name="pref_no_browser_found">कोई वेब ब्राउज़र नहीं मिला।</string>
+  <string name="pref_cast_title">क्रोमकास्ट समर्थन</string>
+  <string name="pref_cast_message_play_flavor">कास्ट डिवाइसेज (जैसे क्रोमकास्ट, ऑडियो स्पीकर्स या एंड्रॉइड टीवी) पर रिमोट मीडिया प्लेबैक के लिए समर्थन सक्षम करें</string>
+  <string name="pref_cast_message_free_flavor">क्रोमकास्ट को तीसरे पक्ष के मालिकाना पुस्तकालयों की आवश्यकता होती है जो एपेक्सपॉड के इस संस्करण में अक्षम हैं</string>
+  <string name="pref_enqueue_downloaded_title">एनक्क्यू डाउनलोड किया गया</string>
+  <string name="pref_enqueue_downloaded_summary">कतार में डाउनलोड किए गए एपिसोड जोड़ें</string>
+  <string name="media_player_builtin">"बिल्ट-इन एंड्रॉइड प्लेयर (बहिष्कृत) "</string>
+  <string name="pref_skip_silence_title">ऑडियो में मौन छोड़ें</string>
+  <string name="pref_videoBehavior_title">वीडियो से बाहर निकलने पर</string>
+  <string name="pref_videoBehavior_sum">वीडियो प्लेबैक छोड़ते समय व्यवहार</string>
+  <string name="stop_playback">प्लेबैक बंद करो</string>
+  <string name="continue_playback">ऑडियो प्लेबैक जारी रखें</string>
+  <string name="behavior">व्यवहार</string>
+  <string name="pref_back_button_behavior_title">बैक बटन व्यवहार</string>
+  <string name="pref_back_button_behavior_sum">बैक बटन का व्यवहार बदलें।</string>
+  <string name="back_button_default">चूक</string>
+  <string name="back_button_open_drawer">ओपन नेविगेशन दराज</string>
+  <string name="back_button_double_tap">बाहर निकलने के लिए डबल टैप करें</string>
+  <string name="back_button_show_prompt">बाहर निकलने की पुष्टि करें</string>
+  <string name="close_prompt">क्या आप सुनिश्चित हैं कि आप एपपोड को बंद करना चाहते हैं?</string>
+  <string name="double_tap_toast">बाहर निकलने के लिए बैक बटन को फिर से टैप करें</string>
+  <string name="back_button_go_to_page">पेज पर जाएं...</string>
+  <string name="back_button_go_to_page_title">पेज चुनें</string>
+  <string name="pref_delete_removes_from_queue_title">कतार से हटाएं</string>
+  <string name="pref_delete_removes_from_queue_sum">हटाए जाने पर किसी एपिसोड को कतार से अपने आप निकाल लें.</string>
+  <string name="pref_filter_feed_title">सब्सक्रिप्शन फ़िल्टर</string>
+  <string name="pref_filter_feed_sum">नेविगेशन दराज और सदस्यता स्क्रीन में अपनी सदस्यता फ़िल्टर करें।</string>
+  <string name="subscriptions_are_filtered">सदस्यता फ़िल्टर की जाती है।</string>
+  <string name="subscriptions_counter_greater_zero">शून्य से अधिक काउंटर</string>
+  <string name="auto_downloaded">ऑटो डाउनलोड किया गया</string>
+  <string name="not_auto_downloaded">ऑटो डाउनलोड नहीं किया गया</string>
+  <string name="kept_updated">अपडेट रखा गया</string>
+  <string name="not_kept_updated">अपडेट नहीं रखा गया</string>
+  <string name="new_episode_notification_enabled">अधिसूचना सक्षम</string>
+  <string name="new_episode_notification_disabled">अधिसूचना अक्षम</string>
+  <string name="pref_feed_settings_dialog_msg">यह सेटिंग प्रत्येक पॉडकास्ट के लिए अद्वितीय है। आप पॉडकास्ट पेज खोलकर इसे बदल सकते हैं।</string>
+  <string name="pref_contribute">योगदान</string>
+  <string name="antennapod_version">एपेक्सपॉड संस्करण</string>
+  <string name="contributors">योगदानकर्ताओं</string>
+  <string name="contributors_summary">हर कोई एपपोड को बेहतर बनाने में मदद कर सकता है - कोड, अनुवाद के साथ या हमारे फोरम में उपयोगकर्ताओं की मदद करके</string>
+  <string name="developers">डेवलपर्स</string>
+  <string name="translators">अनुवादकों</string>
+  <string name="special_thanks">विशेष धन्यवाद</string>
+  <string name="privacy_policy">गोपनीयता नीति</string>
+  <string name="licenses">लाइसेंस</string>
+  <string name="licenses_summary">एपेक्सपॉड अन्य महान सॉफ़्टवेयर का उपयोग करता है</string>
+  <string name="type_to_search">खोज करने के लिए एक क्वेरी टाइप करें</string>
+  <string name="no_results_for_query">\"%1$s\" के लिए कोई परिणाम नहीं मिला</string>
+  <string name="sync_status_started">सिंक शुरू</string>
+  <string name="sync_status_episodes_upload">अपलोड करने से प्रकरण में बदलाव...</string>
+  <string name="sync_status_episodes_download">एपिसोड डाउनलोड करने से बदलाव...</string>
+  <string name="sync_status_upload_played">अपलोडिंग खेला स्टेटस...</string>
+  <string name="sync_status_subscriptions">सिंक्रोनाइजिंग सब्सक्रिप्शन...</string>
+  <string name="sync_status_wait_for_downloads">डाउनलोड पूरा करने के लिए प्रतीक्षा कर रहा है ...</string>
+  <string name="sync_status_success">सिंक्रोनाइजेशन सफल</string>
+  <string name="sync_status_error">सिंक्रोनाइजेशन विफल रहा</string>
+  <string name="import_export_summary">सदस्यता और कतार को किसी अन्य डिवाइस पर ले जाएं</string>
+  <string name="database">डेटाबेस</string>
+  <string name="opml">ओपीएमएल</string>
+  <string name="html">एचटीएमएल</string>
+  <string name="html_export_summary">किसी मित्र को अपनी सदस्यता दिखाएं</string>
+  <string name="opml_export_summary">अपनी सदस्यताओं को किसी अन्य पॉडकास्ट ऐप पर स्थानांतरित करें</string>
+  <string name="opml_import_summary">किसी अन्य पॉडकास्ट ऐप से अपनी सदस्यता आयात करें</string>
+  <string name="database_export_summary">Transfer subscriptions, listened episodes and queue to ApexPod on another device</string>
+  <string name="database_import_summary">किसी अन्य डिवाइस से एपपोड डेटाबेस आयात करें</string>
+  <string name="opml_add_podcast_label">आयात पॉडकास्ट सूची (OPML)</string>
+  <string name="opml_reader_error">ओपीएमएल दस्तावेज़ पढ़ते समय एक त्रुटि हुई है:</string>
+  <string name="opml_import_error_no_file">कोई फाइल चयनित!</string>
+  <string name="html_export_label">एचटीएमएल निर्यात</string>
+  <string name="database_export_label">डाटाबेस निर्यात</string>
+  <string name="database_import_label">डाटाबेस आयात</string>
+  <string name="database_import_warning">डेटाबेस आयात करना आपकी सभी वर्तमान सदस्यताओं और खेल इतिहास को बदल देगा। आपको अपने वर्तमान डेटाबेस को बैकअप के रूप में निर्यात करना चाहिए। क्या आप बदलना चाहते हैं?</string>
+  <string name="please_wait">कृपया प्रतीक्षा करो</string>
+  <string name="export_success_title">निर्यात सफल</string>
+  <string name="export_success_sum">निर्यात की गई फाइल को लिखा गया था: \\n\\n%1$s</string>
+  <string name="opml_import_ask_read_permission">ओपीएमएल फ़ाइल को पढ़ने के लिए बाहरी भंडारण तक पहुंच की आवश्यकता होती है</string>
+  <string name="import_select_file">आयात करने के लिए फ़ाइल का चयन करें</string>
+  <string name="successful_import_label">आयात सफल</string>
+  <string name="import_ok">एपेक्सपॉड को पुनः आरंभ करने के लिए ठीक दबाें</string>
+  <string name="import_no_downgrade">इस डेटाबेस को एपेक्सपॉड के नए संस्करण के साथ निर्यात किया गया था। आपकी वर्तमान स्थापना अभी तक नहीं जानती है कि इस फ़ाइल को कैसे संभालना है।</string>
+  <string name="favorites_export_label">पसंदीदा निर्यात</string>
+  <string name="favorites_export_summary">निर्यात बचाया पसंदीदा फ़ाइल करने के लिए</string>
+  <string name="extend_sleep_timer_label">+%d मिनट</string>
+  <string name="shake_to_reset_label">रीसेट करने के लिए हिलाएं</string>
+  <string name="timer_vibration_label">अंत से कुछ ही समय पहले कंपन</string>
+  <string name="time_seconds">सेकंड</string>
+  <string name="time_minutes">मिनट</string>
+  <string name="time_hours">घंटे</string>
+  <string name="auto_enable_label">ऑटो-सक्षम</string>
+  <string name="sleep_timer_enabled_label">स्लीप टाइमर सक्षम</string>
+  <string name="gpodnetauth_encryption_warning">पासवर्ड और डेटा एन्क्रिप्टेड नहीं हैं!</string>
+  <string name="create_account">खाता बनाएं</string>
+  <string name="gpodnet_description">Gpodder.net एक ओपन-सोर्स पॉडकास्ट सिंक्रोनाइजेशन सेवा है जो एपेक्सपॉड परियोजना से स्वतंत्र है।</string>
+  <string name="gpodnetauth_server_official">आधिकारिक gpodder.net सर्वर</string>
+  <string name="gpodnetauth_server_custom">कस्टम सर्वर</string>
+  <string name="gpodnetauth_host">होस्टनेम</string>
+  <string name="gpodnetauth_select_server">सर्वर का चयन करें</string>
+  <string name="gpodnetauth_device_name">डिवाइस का नाम</string>
+  <string name="gpodnetauth_device_name_default">एपेक्सपॉड पर %1$s</string>
+  <string name="gpodnetauth_existing_devices">मौजूदा डिवाइस</string>
+  <string name="gpodnetauth_create_device">डिवाइस बनाएं</string>
+  <string name="gpodnetsync_pref_report_successful">सफल</string>
+  <string name="gpodnetsync_pref_report_failed">असफल</string>
+  <string name="gpodnetsync_username_characters_error">उपयोगकर्ता नाम केवल पत्र, अंक, हाइफन और रेखांकित हो सकते हैं।</string>
+  <string name="choose_data_directory_message">कृपया अपने डेटा फ़ोल्डर का आधार चुनें। एपपोड उपयुक्त उप-निर्देशिकाएं बनाएगा।</string>
+  <string name="choose_data_directory_available_space">%1%2$ एस मुक्त</string>
+  <string name="pref_resumeAfterCall_sum">एक फोन कॉल पूरा होने के बाद प्लेबैक फिर से शुरू करें</string>
+  <string name="pref_resumeAfterCall_title">कॉल के बाद फिर से शुरू करें</string>
+  <string name="pref_restart_required">इस परिवर्तन को प्रभावी बनाने के लिए एपेक्सपॉड को पुनः आरंभ करना होगा।</string>
+  <string name="subscribing_label">सदस्यता लेने</string>
+  <string name="preview_episode">पूर्वदर्शन</string>
+  <string name="stop_preview">पूर्वावलोकन बंद करो</string>
+  <string name="rewind_label">उल्टा</string>
+  <string name="fast_forward_label">तेजी से आगे</string>
+  <string name="decrease_speed">गति में कमी</string>
+  <string name="increase_speed">गति बढ़ाएं</string>
+  <string name="media_type_video_label">वीडियो</string>
+  <string name="status_downloading_label">प्रकरण डाउनलोड किया जा रहा है</string>
+  <string name="in_queue_label">प्रकरण कतार में है</string>
+  <string name="is_favorite_label">प्रकरण पसंदीदा के रूप में चिह्नित है</string>
+  <string name="load_next_page_label">अगला पेज लोड करें</string>
+  <string name="position">स्थिति: %1$s</string>
+  <string name="apply_action">कार्रवाई लागू करें</string>
+  <string name="play_chapter">अध्याय खेलें</string>
+  <string name="prev_chapter">पिछला अध्याय</string>
+  <string name="next_chapter">अगला अध्याय</string>
+  <string name="authentication_label">प्रमाणीकरण</string>
+  <string name="authentication_descr">इस पॉडकास्ट और उसके एपिसोड के लिए अपना यूजरनेम और पासवर्ड बदलें।</string>
+  <string name="feed_tags_label">टैग</string>
+  <string name="feed_tags_summary">अपनी सदस्यताओं को व्यवस्थित करने में मदद करने के लिए इस पॉडकास्ट के टैग बदलें</string>
+  <string name="feed_folders_include_root">मुख्य सूची में दिखाएं</string>
+  <string name="auto_download_settings_label">ऑटो डाउनलोड सेटिंग्स</string>
+  <string name="episode_filters_label">एपिसोड फ़िल्टर</string>
+  <string name="episode_filters_description">यह तय करने के लिए उपयोग की जाने वाली शर्तों की सूची कि ऑटो डाउनलोड करते समय किसी एपिसोड को शामिल किया जाना चाहिए या बाहर रखा जाना चाहिए</string>
+  <string name="episode_filters_exclude">बाहर</string>
+  <string name="episode_filters_include">शामिल करना</string>
+  <string name="keep_updated">अपडेट रखें</string>
+  <string name="keep_updated_summary">इस पॉडकास्ट को शामिल करें जब (ऑटो-) सभी पॉडकास्ट को ताज़ा करता है</string>
+  <string name="auto_download_disabled_globally">ऑटो डाउनलोड मुख्य एपेक्सपॉड सेटिंग में अक्षम है</string>
+  <string name="statistics_listened_for">के लिए सुना:</string>
+  <string name="statistics_episodes_on_device">डिवाइस पर एपिसोड:</string>
+  <string name="statistics_space_used">अंतरिक्ष का इस्तेमाल किया:</string>
+  <string name="statistics_view_all">सभी पॉडकास्ट » के लिए देखें</string>
+  <string name="sp_apps_importing_feeds_msg">एकल उद्देश्य ऐप्स से सदस्यता आयात करना</string>
+  <string name="search_podcast_hint">पॉडकास्ट खोजें...</string>
+  <string name="search_itunes_label">आईट्यून्स खोजें</string>
+  <string name="search_podcastindex_label">Podcastindex.org खोजें</string>
+  <string name="search_fyyd_label">खोज fyyd</string>
+  <string name="advanced">उन्नत</string>
+  <string name="add_podcast_by_url">आरएसएस के पते से पॉडकास्ट जोड़ें</string>
+  <string name="discover">खोजना</string>
+  <string name="discover_hide">छुपाना</string>
+  <string name="discover_is_hidden">आपने सुझावों को छिपाने के लिए चुना है।</string>
+  <string name="discover_more">अधिक</string>
+  <string name="discover_powered_by_itunes">आईट्यून्स द्वारा सुझाव</string>
+  <string name="search_powered_by">%1$s तक परिणामपरिणाम</string>
+  <string name="add_local_folder">स्थानीय फ़ोल्डर जोड़ें</string>
   <!--Episodes apply actions-->
   <!--Sort-->
   <!--Rating dialog-->
