--- a/core/src/main/res/values-hi/strings.xml
+++ b/core/src/main/res/values-hi/strings.xml
@@ -710,6 +710,32 @@
   <string name="discover_powered_by_itunes">आईट्यून्स द्वारा सुझाव</string>
   <string name="search_powered_by">%1$s तक परिणामपरिणाम</string>
   <string name="add_local_folder">स्थानीय फ़ोल्डर जोड़ें</string>
+    <string name="episode_filters_hint">एकल शब्द /n\\\"कई शब्द\\\"</string>
+  <string name="local_folder">कई शब्द</string>
+  <string name="reconnect_local_folder">स्थानीय फ़ोल्डर को फिर से कनेक्ट करें</string>
+  <string name="reconnect_local_folder_warning">अनुमति खंडन के मामले में, आप सटीक एक ही फ़ोल्डर से फिर से कनेक्ट करने के लिए इसका उपयोग कर सकते हैं। दूसरे फोल्डर का चयन न करें।</string>
+  <string name="local_feed_description">यह वर्चुअल पॉडकास्ट एपेक्सपॉड में फोल्डर जोड़कर बनाया गया था।</string>
+  <string name="unable_to_start_system_file_manager">सिस्टम फाइल मैनेजर शुरू करने में असमर्थ</string>
+  <string name="filter">छानना</string>
+  <string name="not_favorite">पसंदीदा नहीं</string>
+  <string name="queued_label">पंक्तिबद्ध</string>
+  <string name="not_queued_label">कतारबद्ध नहीं</string>
+  <string name="has_media">मीडिया है</string>
+  <string name="no_media">कोई मीडिया नहीं</string>
+  <string name="not_paused">रुका नहीं</string>
+  <string name="not_played">नहीं खेला</string>
+  <string name="sort_title_a_z">शीर्षक (वृद्धि)</string>
+  <string name="sort_title_z_a">शीर्षक (कम)</string>
+  <string name="sort_date_new_old">तिथि (नवीनतम)</string>
+  <string name="sort_date_old_new">दिनांक (सबसे पुराना)</string>
+  <string name="sort_duration_short_long">अवधि (छोटी \\u2192 लंबी)</string>
+  <string name="sort_duration_long_short">अवधि (लंबी \\u2192 छोटी)</string>
+  <string name="sort_a_z">शीर्षक (वृद्धि)</string>
+  <string name="sort_z_a">शीर्षक (कम)</string>
+  <string name="rating_title">ApexPod की तरह?</string>
+  <string name="rating_message">यदि आप एपेक्सपॉड को रेट करने के लिए समय लेते हैं तो हम इसकी सराहना करेंगे।</string>
+  <string name="rating_never_label">मुझे अकेला छोड़ दो</string>
+  <string name="rating_later_label">मुझे बाद में याद दिलाएं</string>
   <!--Episodes apply actions-->
   <!--Sort-->
   <!--Rating dialog-->
