--- a/core/src/main/res/values-hi/strings.xml
+++ b/core/src/main/res/values-hi/strings.xml
@@ -759,6 +759,53 @@
   <string name="subscription_num_columns">स्तंभों की संख्या</string>
   <string name="cast_disconnect_label">कास्ट सत्र को डिस्कनेक्ट करना</string>
   <string name="cast_not_castable">चयनित मीडिया कास्ट डिवाइस के साथ संगत नहीं है</string>
+  <string name="cast_failed_to_play">मीडिया के प्लेबैक शुरू करने में विफल रहा</string>
+    <string name="cast_failed_to_stop">मीडिया के प्लेबैक को रोकने में विफल रहा</string>
+  <string name="cast_failed_to_pause">मीडिया के प्लेबैक को थामने में नाकाम रहे</string>
+  <string name="cast_failed_setting_volume">वॉल्यूम सेट करने में विफल रहा</string>
+  <string name="cast_failed_no_connection">कास्ट डिवाइस से कोई कनेक्शन मौजूद नहीं है</string>
+  <string name="cast_failed_no_connection_trans">कास्ट डिवाइस के लिए कनेक्शन खो दिया गया है। आवेदन यदि संभव हो तो कनेक्शन को फिर से स्थापित करने की कोशिश कर रहा है। कृपया कुछ सेकंड के लिए प्रतीक्षा करें और फिर से प्रयास करें।</string>
+  <string name="cast_failed_status_request">कास्ट डिवाइस के साथ सिंक करने में विफल रहा</string>
+  <string name="cast_failed_seek">कलाकारों डिवाइस पर नई स्थिति के लिए तलाश करने में विफल</string>
+  <string name="cast_failed_receiver_player_error">रिसीवर खिलाड़ी एक गंभीर त्रुटि का सामना करना पड़ा है</string>
+  <string name="cast_failed_media_error_skipping">मीडिया खेल त्रुटि। लंघन&#8230;</string>
+  <string name="notification_group_errors">त्रुटियों</string>
+  <string name="notification_group_news">समाचार</string>
+  <string name="notification_channel_user_action">कार्रवाई जरूरी</string>
+  <string name="notification_channel_user_action_description">दिखाया गया है कि क्या आपकी कार्रवाई की आवश्यकता है, उदाहरण के लिए यदि आपको पासवर्ड दर्ज करना है।</string>
+  <string name="notification_channel_downloading">डाउनलोड</string>
+  <string name="notification_channel_downloading_description">वर्तमान में डाउनलोड करते समय दिखाया गया है।</string>
+  <string name="notification_channel_playing">वर्तमान में खेल</string>
+  <string name="notification_channel_playing_description">प्लेबैक को नियंत्रित करने की अनुमति देता है। पॉडकास्ट खेलते समय आपको दिखाई देने वाली यह मुख्य सूचना है।</string>
+  <string name="notification_channel_download_error">डाउनलोड विफल</string>
+  <string name="notification_channel_download_error_description">डाउनलोड या फ़ीड अपडेट विफल होने पर दिखाया गया है।</string>
+  <string name="notification_channel_sync_error">सिंक्रोनाइजेशन विफल रहा</string>
+  <string name="notification_channel_sync_error_description">जब gpodder तुल्यकालन विफल रहता है दिखाया गया है।</string>
+  <string name="notification_channel_auto_download">स्वचालित डाउनलोड पूरा</string>
+  <string name="notification_channel_episode_auto_download">दिखाया गया है जब एपिसोड स्वचालित रूप से डाउनलोड किया गया है।</string>
+  <string name="notification_channel_new_episode">नया प्रकरण</string>
+  <string name="notification_channel_new_episode_description">दिखाया गया है जब एक पॉडकास्ट का एक नया प्रकरण पाया गया था, जहां सूचनाएं सक्षम हैं</string>
+  <string name="widget_settings">विजेट सेटिंग्स</string>
+  <string name="widget_create_button">विजेट बनाएं</string>
+  <string name="widget_opacity">अपारदर्शिता</string>
+  <string name="on_demand_config_setting_changed">सफलतापूर्वक अपडेट किया गया सेट करना।</string>
+  <string name="on_demand_config_stream_text">ऐसा लगता है कि आप एक बहुत स्ट्रीम । क्या आप स्ट्रीम बटन दिखाने के लिए एपिसोड सूचियां चाहते हैं?</string>
+  <string name="on_demand_config_download_text">ऐसा लगता है कि आप बहुत डाउनलोड करते हैं। क्या आप डाउनलोड बटन दिखाने के लिए एपिसोड सूचियां चाहते हैं?</string>
+  <string name="delete_playlist">प्लेलिस्ट हटाएं</string>
+  <string name="delete_playlist_confirmation_msg">क्या आप इस प्लेलिस्ट को हटाना चाहते हैं?</string>
+  <string name="playlists_label">प्लेलिस्ट</string>
+  <string name="main_fragment_label">घर</string>
+  <string name="pref_auto_delete_playlist_summary">ऑटो डिलीट से प्लेलिस्ट किए गए एपिसोड को बाहर करें</string>
+  <string name="pref_auto_delete_playlist_title">प्लेलिस्टेड एपिसोड रखें</string>
+  <string name="add_to_playlist_label">प्लेलिस्ट में जोड़ें</string>
+  <string name="no_playlists_label">कोई प्लेलिस्ट नहीं</string>
+  <string name="no_playlists_sub_label">प्लेलिस्ट बनाने के बाद, यह यहां दिखाई देगा।</string>
+  <string name="auto_download_cache_pref_summary">"ऑटो डाउनलोड द्वारा रखे गए एपिसोड की संख्या। ऑटो डिलीट से बाहर रखा गया। "</string>
+  <string name="home_label">घर</string>
+    <string name="share_dialog_episode_website_label">एपिसोड वेबपेज</string>
+  <string name="rating_now_label">यकीन है, चलो यह करते हैं!</string>
+  <string name="left_short">बाएँ</string>
+  <string name="right_short">दाएँ</string>
   <!--Episodes apply actions-->
   <!--Sort-->
   <!--Rating dialog-->
